Closed Bug 1200075 Opened 9 years ago Closed 4 years ago

Fix malloc_usable_size situation for SQLite on Windows

Categories

(Firefox Build System :: General, defect)

defect
Not set
normal

Tracking

(firefox43 wontfix, firefox-esr68 wontfix, firefox-esr78 wontfix, firefox77 wontfix, firefox78 wontfix, firefox79 wontfix, firefox80 fixed)

RESOLVED FIXED
mozilla80
Tracking Status
firefox43 --- wontfix
firefox-esr68 --- wontfix
firefox-esr78 --- wontfix
firefox77 --- wontfix
firefox78 --- wontfix
firefox79 --- wontfix
firefox80 --- fixed

People

(Reporter: n.nethercote, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Windows builds of SQLite warn about malloc_usable_size not being available.
This is because we set HAVE_MALLOC_USABLE_SIZE and SQLITE_WITHOUT_MSIZE due to
mozglue exposing malloc_usable_size.

glandium says the fix is to add this:

> ['-FI', TOPOBJDIR + '/dist/include/mozmemory.h'] 

to CFLAGS in the branch that adds HAVE_MALLOC_USABLE_SIZE/SQLITE_WITHOUT_MSIZE,
in db/sqlite3/src/moz.build.
Product: Core → Firefox Build System
Assignee: nobody → mh+mozilla
Regressed by: 719579

It was setup this way in bug 719579 for legitimate reasons (because
_msize would end up using the system symbol, which would crash trying to
get the size information from jemalloc allocations), but these reasons
don't apply anymore: back then the linking situation was different, and
nowadays, mozglue.dll exports its own _msize which plugs into
mozjemalloc, and sqlite is folded into nss3.dll, which links against
mozglue.dll, such that using _msize on mozjemalloc allocations works.

Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/44ea5049ca21
Do not avoid sqlite3 using _msize. r=froydnj
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: